# CandyCrushLike

./: .editorconfig  .gitignore  .gitignore.txt  CandyCrushLike.sln
CandyCrushLike/: .gitignore  CMakeLists.txt  CandyCrushLike.vcxproj  CandyCrushLike.vcxproj.filters  Grille.cpp  Grille.h  Item.cpp  Item.h  main.cpp
CandyCrushLike/components/: AssetMan.cpp  Click.cpp  Game.cpp  GamePlay.cpp  Grille.cpp  Item.cpp  MainMenu.cpp  StateMan.cpp  candy.cpp  mouse_button.cpp  mouse_button.h  sfml_object.cpp  sfml_test.cpp  test.cpp
CandyCrushLike/headers/: AssetMan.h  Bonbon.h  Click.h  Game.h  GamePlay.h  Grille.h  Item.h  MainMenu.h  State.h  StateMan.cpp  StateMan.h  candy.h  main.h  make_unique.h  mouse_button.h  sfml_object.h  sfml_test.h  test.h
